upgrade to Spring Boot 2 and Java 11 (inc changes to actuator endpoints)